@@ -1128,6 +1128,13 @@ initpycurl(void)
     insint_c(d, "PAUSE_ALL",  CURLPAUSE_ALL);
     insint_c(d, "PAUSE_CONT", CURLPAUSE_CONT);
 
+    /* CURL_SEEKFUNC: return values for seek function */
+    insint_c(d, "SEEKFUNC_OK", CURL_SEEKFUNC_OK);
+    insint_c(d, "SEEKFUNC_FAIL", CURL_SEEKFUNC_FAIL);
+#ifdef HAVE_CURL_7_19_4_OPTS
+    insint_c(d, "SEEKFUNC_CANTSEEK", CURL_SEEKFUNC_CANTSEEK);
+#endif
+
 #ifdef HAVE_CURLOPT_DNS_SERVERS
     insint_c(d, "DNS_SERVERS", CURLOPT_DNS_SERVERS);
 #endif
