@@ -1,6 +1,10 @@
 master
 ------
 
+        * Added CURL_SEEKFUNC_OK, CURL_SEEKFUNC_FAIL and
+          CURL_SEEKFUNC_CANTSEEK. CURL_SEEKFUNC_CANTSEEK requires
+          libcurl 7.19.5+.
+
         * Added CURLINFO_CONDITION_UNMET (libcurl 7.19.4+).
 
         * Added CURLPROXY_HTTP_1_0 (libcurl 7.19.4+).
